#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(Hezelnut, 0.0, ned.rihine@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([include/hezelnut/HNConstantString.h])
AC_CONFIG_HEADERS([include/config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_C_CONST

# Checks for library functions.
AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
