noinst_LIBRARIES = libHezelnut.a

libHezelnut_a_SOURCES =  \
	./HNArray.m   \
	./HNSequenceableCollection.m   \
	./HNClass.m   \
	./HNArrayedCollection.m   \
	./HNStream.m   \
	./HNClassDescription.m   \
	./HNObject.m   \
	./HNBehavior.m   \
	./HNBlockClosure.m   \
	./HNConstantString.m   \
	./HNRandom.m   \
	./HNNil.m
