noinst_LIBRARIES = libHezelnut.a

libHezelnut_a_SOURCES =  \
	HNArray.m \
	HNArrayedCollection.m \
	HNBehavior.m \
	HNBlockClosure.m \
	HNCharacterArray.m \
	HNClass.m \
	HNClassDescription.m \
	HNCollection.m \
	HNConstantString.m \
	HNNil.m \
	HNObject.m \
	HNObjectMemory.m \
	HNRandom.m \
	HNSequenceableCollection.m \
	HNStream.m \
	HNString.m

